[gd_scene load_steps=6 format=3 uid="uid://8rwn73t6cfuo"]

[ext_resource type="Texture2D" uid="uid://eabav8704xuv" path="res://Textures/AirborneMainMenu.jpg" id="1_mfxwm"]
[ext_resource type="Script" path="res://newmainmenu.gd" id="1_vegq8"]

[sub_resource type="Animation" id="Animation_ofx3x"]
resource_name = "MainMenuAnimation"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("../TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.144569, 0.144569), Vector2(1, 1), Vector2(0.144569, 0.144569)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5, 9.96667),
"transitions": PackedFloat32Array(0.420448, 0.450626, 1.93187),
"update": 0,
"values": [Vector2(-588, -346), Vector2(-588, -320), Vector2(-588, -346)]
}

[sub_resource type="Animation" id="Animation_2fp06"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.144569, 0.144569)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-588, -346)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5hly"]
_data = {
"MainMenuAnimation": SubResource("Animation_ofx3x"),
"RESET": SubResource("Animation_2fp06")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_vegq8")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -588.0
offset_top = -346.0
offset_right = 7677.0
offset_bottom = 4302.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.144569, 0.144569)
texture = ExtResource("1_mfxwm")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1000, 1000)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_v5hly")
}

[node name="Play" type="Button" parent="."]
offset_left = -96.0
offset_top = -105.0
offset_right = 151.0
offset_bottom = -53.0
flat = true

[node name="Locker" type="Button" parent="."]
offset_left = -92.0
offset_top = -26.0
offset_right = 155.0
offset_bottom = 26.0
flat = true

[node name="Options" type="Button" parent="."]
offset_left = -98.0
offset_top = 50.0
offset_right = 156.0
offset_bottom = 102.0
flat = true

[node name="Quit" type="Button" parent="."]
offset_left = -95.0
offset_top = 131.0
offset_right = 152.0
offset_bottom = 183.0
flat = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Locker" to="." method="_on_locker_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
